Cleanup and fix some bugs + Top button

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Redactus</title>
 
   <meta charset="utf-8" />
-  <meta property="og:title" content="Redactle - A daily puzzle game" />
-  <meta property="og:description" content="Try to find the title of a random Wikipedia article." />
+  <meta property="og:title" content="Redactus - La version française du jeu Redactle" />
+  <meta property="og:description" content="Essayez de trouver le titre d'un article Wikipédia au hasard." />
   <meta property="og:url" content="https://www.redactle.com/" />
   <meta property="og:image" content="https://www.redactle.com/card.png" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Redactle - A daily web browser puzzle game" />
+  <meta name="twitter:title" content="Redactus - La version française du jeu Redactle" />
   <meta name="twitter:description"
-    content="Try to find the title of a random Wikipedia article by guessing words to reveal them on the page. New puzzle daily!" />
+    content="Essayez de trouver le titre d'un article Wikipédia au hasard en devinant des mots pour les révéler sur la page. Nouveau puzzle tous les jours !" />
   <meta name="twitter:image" content="https://www.redactle.com/twitterCard.png" />
-  <title>Redactle FR</title>
+  <title>Redactus</title>
 </head>
 
 <body>
