--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1578220624296803"
+     crossorigin="anonymous"></script>
 </body>
 
 </html>
