Edit some bug and share button

--- a/index.html
+++ b/index.html
@@ -16,15 +16,24 @@
   <meta name="twitter:title" content="Redactus - La version française du jeu Redactle" />
   <meta name="twitter:description"
     content="Essayez de trouver le titre d'un article Wikipédia au hasard en devinant des mots pour les révéler sur la page. Nouveau puzzle tous les jours !" />
-  <meta name="twitter:image" content="https://www.redactle.com/twitterCard.png" />
+  <script src="https://kit.fontawesome.com/2acc979565.js" crossorigin="anonymous"></script>
+  <!-- <meta name="twitter:image" content="https://www.redactle.com/twitterCard.png" /> -->
   <title>Redactus</title>
-
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1578220624296803"
-    crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div id="app"></div>
+  <div id="divadsensedisplaynone" style="display:none;">
+    <!-- put here all adsense code -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1578220624296803"
+      crossorigin="anonymous"></script>
+    <!-- Test -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1578220624296803" data-ad-slot="6125916261"
+      data-full-width-responsive="true"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
