--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" style="overflow-x: hidden; overflow-y: overlay;">
 
 <head>
   <meta charset="UTF-8" />
@@ -23,17 +23,6 @@
 
 <body>
   <div id="app"></div>
-  <div id="divadsensedisplaynone" style="display:none;">
-    <!-- put here all adsense code -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1578220624296803"
-      crossorigin="anonymous"></script>
-    <!-- Test -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1578220624296803" data-ad-slot="6125916261"
-      data-full-width-responsive="true"></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
